support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_missing_rparenthesis.i
%module xxx

%inline %{
class Klass {
Klass(int i) : m_i(
{
}
};
%}

void something() {
}

