support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_missing_rparenthesis.stderr
cpp_missing_rparenthesis.i:5: Error: Missing ')'. Reached end of input.
cpp_missing_rparenthesis.i:5: Error: Syntax error in input(3).
